# prob4

./: .gitignore  Preliminary Analysis.ipynb  README.md  Solution.ipynb
bip39-cracker/: Cargo.toml
bip39-hash-checker/: Cargo.toml
bip39-hash-checker/src/: main.rs
bip39-mnemonic-crack/: Cargo.toml  dict.txt  digest.txt  index.txt
bip39-mnemonic-crack/src/: bip39_utils.rs  bit_utils.rs  main.rs
