[package]
name = "bip39-mnemonic-crack"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.6", features = ["derive"] }
crossterm = "0.23"
futures = "0.3"
hex-literal = "0.3.4"
hmac = "0.12.1"
itertools = "0.10.3"
pbkdf2 = { version = "0.11", features = ["simple"] }
sha2 = "0.10.2"
time = { version = "0.3.11", features = ["formatting"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "fs", "io-util"] }
